タイトル案1をタイトルに追加

--- a/paper.tex
+++ b/paper.tex
@@ -51,7 +51,7 @@
 
 \twocolumn[%
 \begin{center}
- {\Large タイトル}\vspace{.5ex}\\
+ {\Large LDAを用いた室内シーンにおける物体分類}\vspace{.5ex}\\
 \large
 立命館大学大学院　
 情報理工学研究科　
@@ -72,6 +72,5 @@
 
 \begin{thebibliography}{99}% 文献が10以上のとき99，10未満のとき9
 \end{thebibliography}
-
 \end{document}
 
