参考文献追加

--- a/paper.tex
+++ b/paper.tex
@@ -71,6 +71,7 @@
 
 
 \begin{thebibliography}{99}% 文献が10以上のとき99，10未満のとき9
+\bibitem{nagai2014} ムハンマドアッタミミ, ファドリルムハンマド, 阿部香澄, 中村友昭, 船越孝太郎, 長井隆行 ``多層マルチモーダルLDAを用いた人の動きと物体の統合概念の形成'' 日本ロボット学会誌, vol.32, no.8, pp.89-100, 2014
 \end{thebibliography}
 \end{document}
 
