参考文献の追加

--- a/paper.tex
+++ b/paper.tex
@@ -72,7 +72,11 @@
 
 
 \begin{thebibliography}{99}% 文献が10以上のとき99，10未満のとき9
+\bibitem{ms} Shogo Kawamoto, Takayuki Ikegami, Tadashi Matsuo, Nobutaka Shimada, (Ritsumeikan University) 
+"Automatic Logging System of Person-Object Communication Based on Hierarchical Visual Event Detection"(poster), 
+The 10th Joint Workshop on Machine Perception and Robotics (MPR2014), R-P-06, Peking University, Beijing, China, October 16 - 17.
 \bibitem{nagai2014} ムハンマドアッタミミ, ファドリルムハンマド, 阿部香澄, 中村友昭, 船越孝太郎, 長井隆行 ``多層マルチモーダルLDAを用いた人の動きと物体の統合概念の形成'' 日本ロボット学会誌, vol.32, no.8, pp.89-100, 2014
+\bibitem{kmeans} J.MacQueen "Some methods for classification and analysis of multivariate observations" In Proceedings of the Fifth Berkeley Symposium on Mathematical Statistics and Probability, pp.281-297
 \end{thebibliography}
 \end{document}
 
