K-meansをK平均法と修正

--- a/section1.tex
+++ b/section1.tex
@@ -14,6 +14,7 @@ LDAではグラフィカルモデルを用いてトピック推定を行う.
 グラフィカルモデルにおける1ドキュメントは1画像に該当し, 
 1画像の中に現れる局所特徴をBoFで表現したものが単語に該当する.
 具体的には, 128次元のSIFT\cite{}を用いて変換した後, 
-K-means\cite{kmeans}を用いてベクトル量子化し, K個のクラスに分けたヒストグラムを用いる.
+K平均法\cite{kmeans}を用いてベクトル量子化し, K個のクラスに分けたヒストグラムを用いる.
 \par
+
 
