島田先生チェック時のバージョン

--- a/experiment.tex
+++ b/experiment.tex
@@ -1,4 +1,17 @@
-\section{実験}
-ハサミ, スティック糊, カッター, ホッチキス, 容器の5種類の物体を含んだ画像N枚を対象にトピック分類の性能評価実験を行う.
+\section{実験(案1)}
+(各画像に1種類の物体が一つずつでてくる(例:ホッチキスだけの画像))
+\par
+ハサミ, スティック糊, カッター, ホッチキス, 容器の5種類の物体を含んだ画像200枚を対象にトピック分類の性能評価実験を行う.
+\par
+K平均法でのクラスタ数$T$は100とした. また, LDAでのハイパーパラメータ$\alpha$は1.0, $\beta$は0.1とした.
+実験の結果～ということが言える.
+
+
+\section{実験(案2)}
+(各画像に1種類以上の物体が一つずつでてくる(例:ハサミとカッターの画像, ホッチキスだけの画像)
+\par
+ハサミ, スティック糊, カッター, ホッチキス, 容器の5種類の物体を含んだ画像200枚を対象にトピック分類の性能評価実験を行う.
 \par
 実験の結果～ということが言える.
+
+
