--- a/intro.tex
+++ b/intro.tex
@@ -2,16 +2,19 @@
 
 近年, 監視カメラや映像レコーダといったセキュリティ用映像装置の需要が高まり, 急速に普及している. 
 室内環境を監視するシステムは, 多数の人物の出入りなどで観測する画像が複雑になり, 移動物体の抽出が課題となる. 
-室内の物体を操作したり, 椅子に座ったことを検知する
 \par
+この分野の研究には, 室内に様々なセンサを取りつけ, センサ得られた情報を元に人の行動を認識する研究\cite{森}や, 
 室内シーンをRGB-Dセンサで取得し, 人物の入退室や物体の持ち込み・持ち去り・移動を検知し, 
-ネットワーク越しに検知結果を閲覧できるシステム\cite{ms}がある.
-
+ネットワーク越しに検知結果を閲覧できるシステムの研究\cite{ms}がある.
+\par
 しかし, イベントをヒューリスティックに検知するのには限界があり, 
 機械学習の仕組みを用いてこれを行いたいと考える.
-機械学習を用いた
-マルチモーダルLDAを使ったトピック分類の研究\cite{nagai2014}がある.
-機械学習の枠組みを利用して室内シーンにおけるイベント検知を目指す.
+\par
+機械学習を用いた物体のカテゴリ分類・認識の研究として, Latent Dirichlet Allocation(LDA)をはじめとする統計モデルを応用した
+マルチモーダルLDAを使ったトピック分類の研究\cite{nagai2014}がある. 
+LDAを用いたカテゴリ分類・認識の研究は盛んに行われているが, シーンイベントの検知に応用されている研究は少ない.
+\par
+そこで我々は, 機械学習の枠組みを利用して室内シーンにおけるイベント検知を目指す.
 そのために, まず物体のみを対象にした分類を行う.
 本稿では, 物体が映った画像に対してLDAを用いたトピック分類を行い, その成果について報告する.
 
