--- a/paper.tex
+++ b/paper.tex
@@ -51,7 +51,7 @@
 
 \twocolumn[%
 \begin{center}
- {\Large LDAを用いた室内シーンにおける物体分類}\vspace{.5ex}\\
+ {\Large LDAを用いた室内シーンにおける物体のトピック分類}\vspace{.5ex}\\
 \large
 立命館大学大学院　
 情報理工学研究科　
@@ -59,7 +59,7 @@
 6612140003-1　
 池上 貴之
 \\
-{\Large\sffamily title}\vspace{1ex}
+%{\Large\sffamily title}\vspace{1ex}
 %\\
 %{\fontfamily{txr}\selectfont Takayuki IKEGAMI,}
 \end{center}
@@ -73,11 +73,16 @@
 
 
 \begin{thebibliography}{99}% 文献が10以上のとき99，10未満のとき9
+\bibitem{森}
+森 武俊．"生活支援のためのセンサデータマイニング ---「みまもり工学」への展開"，
+電子情報通信学会誌，Vol. 94, No. 4, pp. 276-281, 2011.
 \bibitem{ms} Shogo Kawamoto, Takayuki Ikegami, Tadashi Matsuo, Nobutaka Shimada, (Ritsumeikan University) 
 "Automatic Logging System of Person-Object Communication Based on Hierarchical Visual Event Detection"(poster), 
 The 10th Joint Workshop on Machine Perception and Robotics (MPR2014), R-P-06, Peking University, Beijing, China, October 16 - 17.
 \bibitem{nagai2014} ムハンマドアッタミミ, ファドリルムハンマド, 阿部香澄, 中村友昭, 船越孝太郎, 長井隆行 ``多層マルチモーダルLDAを用いた人の動きと物体の統合概念の形成'' 日本ロボット学会誌, vol.32, no.8, pp.89-100, 2014
-\bibitem{kmeans} J.MacQueen "Some methods for classification and analysis of multivariate observations" In Proceedings of the Fifth Berkeley Symposium on Mathematical Statistics and Probability, pp.281-297
+\bibitem{lda} T. L. Griffiths and M. Steyvers, “Finding scientific topics,” Proc. of the National Academy of Sciences of the United States of America, vol.101, pp.5228-5235, 2004.
+\bibitem{sift} D.G.Lowe "Distinctive Image Features from Scale-INvariant Keypoints" International Journal of Computer Vision, vol.60, no.2, pp.91-110, 2004
+\bibitem{kmeans} J.MacQueen "Some methods for classification and analysis of multivariate observations" In Proceedings of the Fifth Berkeley Symposium on Mathematical Statistics and Probability, pp.281-297, 1967
 \end{thebibliography}
 \end{document}
 
